# Segmentation-Faulters-2025

./: Bestellung_repo.h  CMakeLists.txt  main.cpp  tests_main.cpp
Customer/: Customer.cpp  Customer.h  CustomerRepo.cpp  CustomerRepo.h
Domain/: Customer.cpp  Customer.h  Employee.cpp  Employee.h  Order.cpp  Order.h  Product.cpp  Product.h  User.cpp  User.h
Employee/: Employee.cpp  Employee.h  EmployeeRepo.cpp  EmployeeRepo.h
Order/: Bestellung_repo.h  Order.cpp  Order.h  Order_repo.cpp  Order_repo.h
Product/: Product.h  ProductRepo.h  Validator.h
Repo/: Bestellung_repo.cpp  CustomerRepo.cpp  CustomerRepo.h  EmployeeRepo.cpp  EmployeeRepo.h  Order_repo.cpp  Order_repo.h  ProductRepo.cpp  ProductRepo.h  UserRepo.cpp  UserRepo.h
Services/: ProductValidator.cpp  ProductValidator.h  UserServices.cpp  UserServices.h  Validator.cpp  Validator.h
Tests/: ClientTests.cpp  EmployeeTests.cpp  OrderTests.cpp  ProductTests.cpp  UserTests.cpp  UserTests.h
UI/: CustomerMenu.cpp  CustomerMenu.h  EmployeeMenu.cpp  EmployeeMenu.h  LoginUI.cpp  LoginUI.h
UI_USER/: CustomerMenu.cpp  CustomerMenu.h  EmployeeMenu.cpp  EmployeeMenu.h  LoginUI.cpp  LoginUI.h
User/: User.cpp  User.h  UserRepo.cpp  UserRepo.h  UserServices.h  UserTests.cpp
